JRADEV-16387: changed layout of confirmation page - less cluttered, no redundant info

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/css/global.less
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/css/global.less
@@ -7,7 +7,7 @@
 		}
 	}
 
-  #noDestinationProjectError{
+  #noDestinationProjectError {
     clear: none;
   }
 
@@ -31,4 +31,12 @@ form.aui {
 			color: #999999;
 		}
 	}
+}
+
+#stepped-process {
+  form.aui.confirmation {
+    .fields-list {
+      margin-top: 15px;
+    }
+  }
 }
