--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/permissionchecks.vm
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/permissionchecks.vm
@@ -6,25 +6,18 @@
 <body>
 <div id="stepped-process" class="content-container">
     <div class="content-related">
-    <ol class="steps">
+    	<ol class="steps">
             <li class="done">$i18n.getText('cpji.select.project')</li>
             <li class="done">$i18n.getText('cpji.select.issue.type')</li>
             <li class="current">$i18n.getText('cpji.confirmation')</li>
         </ol>
     </div>
     <div class="content-body aui-panel">
-        <form #if ($action.isCopyingPossible()) action="CopyIssueToInstanceAction.jspa" method="post" #else action="../browse/$action.getIssueKey()" method="get" #end class="aui" >
+        <form #if ($action.isCopyingPossible()) action="CopyIssueToInstanceAction.jspa" method="post" #else action="../browse/$action.getIssueKey()" method="get" #end class="aui confirmation" >
 			<h2>$i18n.getText('cpji.confirm.new.values')</h2>
 			#if(!$action.isCopyingPossible())
-				<div class="aui-message error"><span class="aui-icon icon-error"></span><p>$i18n.getText('cpji.cant.copy.issue')</p>
-				   <ul>
-					 #foreach( $permission in $action.getSystemFieldPermissions() )
-					   #if (!$permission.canCopyIssue())<li>$textutils.htmlEncode($permission.fieldName)</li>#end
-					#end
-					#foreach( $permission in $action.getCustomFieldPermissions() )
-						#if (!$permission.canCopyIssue())<li>$textutils.htmlEncode($permission.fieldName)</li>#end
-					#end
-				   </ul>
+				<div class="aui-message error"><span class="aui-icon icon-error"></span>
+					<p>$i18n.getText('cpji.cant.copy.issue')</p>
 				</div>
 			#elseif (!$action.getSystemFieldPermissions().isEmpty() || !$action.getCustomFieldPermissions().isEmpty())
 				<div class="aui-message warning"><span class="aui-icon icon-warning"></span><p>$i18n.getText('cpji.this.issue.can.be.copied')</p>
@@ -43,22 +36,28 @@
 			#if ($action.getSystemFieldPermissions().isEmpty())
 				<div class="aui-message info"><span class="aui-icon icon-info"></span><p>$i18n.getText('cpji.all.system.fields.retained')</p></div>
 			#else
-				$i18n.getText('cpji.some.fields.are.missing') #if ($action.selectedDestinationProject.jiraLocation.local) $i18n.getText('cpji.please.set.values') #end
-
-				#foreach( $permission in $action.getSystemFieldPermissions() )
-					$action.getHtmlForField($permission)
-				#end
+				<span>
+					$i18n.getText('cpji.some.fields.are.missing') #if ($action.selectedDestinationProject.jiraLocation.local) $i18n.getText('cpji.please.set.values') #end
+				</span>
+				<div class="fields-list">
+					#foreach( $permission in $action.getSystemFieldPermissions() )
+						$action.getHtmlForField($permission)
+					#end
+				</div>
 			#end
 
 			<h4 class="sub-heading">$i18n.getText('cpji.custom.fields')</h4>
 			#if ($action.getCustomFieldPermissions().isEmpty())
 				<div class="aui-message info"><span class="aui-icon icon-info"></span><p>$i18n.getText('cpji.all.custom.fields.retained')</p></div>
 			#else
-				$i18n.getText('cpji.some.fields.are.missing') #if ($action.selectedDestinationProject.jiraLocation.local) $i18n.getText('cpji.please.set.values') #end
-
-				#foreach( $permission in $action.customFieldPermissions )
-					$action.getHtmlForField($permission)
-				#end
+				<span>
+					$i18n.getText('cpji.some.fields.are.missing') #if ($action.selectedDestinationProject.jiraLocation.local) $i18n.getText('cpji.please.set.values') #end
+				</span>
+            	<div class="fields-list">
+					#foreach( $permission in $action.customFieldPermissions )
+						$action.getHtmlForField($permission)
+					#end
+				</div>
 			#end
 
             <div class="button-container">
