--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/selectproject.vm
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/selectproject.vm
@@ -14,7 +14,7 @@
     </div>
     <div class="content-body aui-panel">
         <form action="SelectTargetProjectAction.jspa" class="aui" method="post">
-            <h2>$i18n.getText('cpji.select.destination.project')</h2>
+            <h2 class="formtitle">$i18n.getText('cpji.select.destination.project')</h2>
             <fieldset>
 				<div class="field-group" id="targetEntityLink-container" data-selected-project-key="$textutils.htmlEncode($selectedIssueProjectKey)">
 					<label for="targetEntityLink">$i18n.getText('common.words.project')</label>
@@ -24,12 +24,12 @@
 					</span>
 				</div>
             </fieldset>
-            <div class="button-container">
-                <div class="buttons">
-                    <input id="select-project-submit" type="submit" value="$i18n.getText('common.forms.next')" class="button submit"/>
-                    <a href="$req.contextPath$viewUrl" class="aui-button-cancel">$i18n.getText("common.forms.cancel")</a>
-                </div>
-            </div>
+			<div class="buttons-container">
+				<div class="buttons">
+					<input id="select-project-submit" type="submit" value="$i18n.getText('common.forms.next')" class="aui-button button submit"/>
+					<a href="$req.contextPath$viewUrl" class="aui-button aui-button-link cancel">$i18n.getText("common.forms.cancel")</a>
+				</div>
+			</div>
             <input type="hidden" name="id" value="$action.getId()"/>
             <input type="hidden" name="atl_token" value="$action.getXsrfToken()"/>
         </form>
