JRADEV-16387: testing that missing required fields are reported correctly

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/error.vm
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/error.vm
@@ -1,5 +1,5 @@
 <div class="aui-message error"><span class="aui-icon icon-error"></span>
-    <p>An error occurred.</p>
+    <p>$i18n.getText('cpji.error.occurred')</p>
     <ul>
     #foreach( $error in $action.getErrorMessages() )
         <li>$textutils.htmlEncode($error)</li>
