--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/copydetails.vm
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/copydetails.vm
@@ -42,7 +42,7 @@
 					<input type="checkbox" class="checkbox" id="copy-comments" name="copyComments" value="true" #if ($error != "") disabled="" #else checked="checked" #end/>
 					<label for="copy-comments">$i18n.getText('cpji.copy.comments')</label>
 					#if ($error != "")
-                        <div class="warning">$error</div>
+                        <div class="error">$error</div>
 					#end
 				</div>
 				#end
@@ -54,7 +54,7 @@
 					<label for="copy-attachments">$i18n.getText('cpji.copy.attachments')</label>
 					#set ($error = $action.copyAttachmentsErrorMessage)
 					#if ($error != "")
-                        <div class="warning">$error</div>
+                        <div class="error">$error</div>
 					#end
                 </div>
 				#end
@@ -65,7 +65,7 @@
 					<input type="checkbox" class="checkbox" id="copy-issue-links" name="copyIssueLinks" value="true" #if ($error != "") disabled="" #else checked="checked" #end/>
 					<label for="copy-issue-links">$i18n.getText('cpji.copy.issue.links')</label>
 					#if ($error != "")
-                        <div class="warning">$error</div>
+                        <div class="error">$error</div>
 					#end
 				</div>
 				#end
