JRADEV-16387: added title tag to the success page

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/copied.vm
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/copied.vm
@@ -1,5 +1,8 @@
 #* @vtlvariable name="action" type="com.atlassian.cpji.action.CopyIssueToInstanceAction" *#
 <html>
+<head>
+    <title>$i18n.getText('cpji.copy.successful')</title>
+</head>
 <body>
 
 <div id="stepped-process" class="content-container">
