--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/copydetails.vm
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/copydetails.vm
@@ -14,13 +14,13 @@
 					<label for="issueType">$i18n.getText('cpji.issue.type')</label>
 					<select class="singleSelect"  name="issueType" id="issueType">
 						#if(!$action.availableSubTaskTypes.empty)
-						<optgroup label="$i18n.getText('cpji.subtask')">
+						<optgroup label="$i18n.getText('cpji.subtask.issue.types')">
 							#foreach( $issueType in $action.availableSubTaskTypes)
 								<option #if(${issueType.isSelected()}) selected #end
 																	   value="$textutils.htmlEncode(${issueType.value})">$textutils.htmlEncode(${issueType.value})</option>
 							#end
 						</optgroup>
-                        <optgroup label="$i18n.getText('cpji.issue.type')">
+                        <optgroup label="$i18n.getText('cpji.standard.issue.types')">
 						#end
 						#foreach( $issueType in $action.getAvailableIssueTypes())
 							<option #if(${issueType.isSelected()}) selected #end
