JRADEV-16387: the code will not try to render all fields that were reported to be misconfigured, it will now only render fields if values mapping is needed otherwise it will present an error to the user

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/default.html.for.field.vm
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/default.html.for.field.vm
@@ -1,4 +1,4 @@
-#* @vtlvariable name="permission" type="com.atlassian.cpji.action.FieldPermission" *#
+#* @vtlvariable name="permission" type="com.atlassian.cpji.action.MissingFieldPermissionDescription" *#
 <div class="field-group" data-field-id="$textutils.htmlEncode($permission.fieldId)" #if (!$permission.canCopyIssue()) class="status-inactive" #end>
 	<label>$textutils.htmlEncode($permission.fieldName)</label>
 	#set($error=!$permission.canCopyIssue())
