JRADEV-17998: fixed summary field width issue

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/copydetails.vm
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/copydetails.vm
@@ -36,7 +36,7 @@
 			<fieldset>
 				<div class="field-group">
 					<label for="summary">$i18n.getText('common.words.summary')</label>
-					<input type="text" class="text" name="summary" id="summary" value="$textutils.htmlEncode($summary)"/>
+					<input type="text" class="text long-field" name="summary" id="summary" value="$textutils.htmlEncode($summary)"/>
 				</div>
 			</fieldset>
 
