JRADEV-16370: looking after poor, orphaned not i18-ed phrases

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/authorize.vm
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/authorize.vm
@@ -1,4 +1,4 @@
 <div class="aui-message info"><span class="aui-icon icon-info"></span>
-    <p>You have to <a href="$action.getAuthorizationUrl()">authorize</a> this operation. </p>
+	<p>$i18n.getText("cpji.you.have.to.authorize.this.operation", $action.getAuthorizationUrl())</p>
 </div>
 
